--- a/wd12/src/index.html
+++ b/wd12/src/index.html
@@ -12,7 +12,7 @@
     <link href="css/bootstrap-grid.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/main.css.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
 
   <body>
